finish packets