@@ -6,8 +6,10 @@ import com.direwolf20.justdirethings.client.screens.standardbuttons.ToggleButton
 import com.direwolf20.justdirethings.client.screens.widgets.ToggleButton;
 import com.direwolf20.justdirethings.common.blockentities.BlockSwapperT1BE;
 import com.direwolf20.justdirethings.common.containers.BlockSwapperT2Container;
-import com.direwolf20.justdirethings.common.network.data.SwapperPayload;
+import com.direwolf20.justdirethings.network.server.C2SSwapperPayload;
+import com.direwolf20.justdirethings.platform.Services;
 import com.direwolf20.justdirethings.util.MiscTools;
+import com.direwolf20.justdirethings.util.SwapEntityType;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.core.GlobalPos;
@@ -15,17 +17,16 @@ import net.minecraft.locale.Language;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.player.Inventory;
-import net.neoforged.neoforge.network.PacketDistributor;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class BlockSwapperT2Screen extends BaseMachineScreen<BlockSwapperT2Container> {
-    protected final ResourceLocation ACTIVE = ResourceLocation.fromNamespaceAndPath(JustDireThings.MODID, "textures/gui/buttons/active.png");
-    protected final ResourceLocation INACTIVE = ResourceLocation.fromNamespaceAndPath(JustDireThings.MODID, "textures/gui/buttons/inactive.png");
+    protected final ResourceLocation ACTIVE = JustDireThings.id("textures/gui/buttons/active.png");
+    protected final ResourceLocation INACTIVE = JustDireThings.id("textures/gui/buttons/inactive.png");
     public GlobalPos boundTo;
     public BlockSwapperT1BE be;
     BlockSwapperT2Container container;
-    public int swap_entity_type;
+    public SwapEntityType swap_entity_type;
     public boolean swapBlocks;
     public int activeX;
     public int activeY;
@@ -36,7 +37,7 @@ public class BlockSwapperT2Screen extends BaseMachineScreen<BlockSwapperT2Contai
         if (container.baseMachineBE instanceof BlockSwapperT1BE blockSwapper) {
             boundTo = blockSwapper.boundTo;
             be = blockSwapper;
-            swap_entity_type = blockSwapper.swap_entity_type.ordinal();
+            swap_entity_type = blockSwapper.swap_entity_type;
             swapBlocks = blockSwapper.swapBlocks;
         }
     }
@@ -44,8 +45,8 @@ public class BlockSwapperT2Screen extends BaseMachineScreen<BlockSwapperT2Contai
     @Override
     public void init() {
         super.init();
-        addRenderableWidget(ToggleButtonFactory.SWAPPERENTITYBUTTON(getGuiLeft() + 26, topSectionTop + 44, swap_entity_type, b -> {
-            swap_entity_type = ((ToggleButton) b).getTexturePosition();
+        addRenderableWidget(ToggleButtonFactory.SWAPPERENTITYBUTTON(getGuiLeft() + 26, topSectionTop + 44, swap_entity_type.ordinal(), b -> {
+            swap_entity_type =SwapEntityType.values()[((ToggleButton) b).getTexturePosition()];
             saveSettings();
         }));
         addRenderableWidget(ToggleButtonFactory.SWAPPERBLOCKBUTTON(getGuiLeft() + 8, topSectionTop + 44, swapBlocks ? 0 : 1, b -> {
@@ -82,12 +83,12 @@ public class BlockSwapperT2Screen extends BaseMachineScreen<BlockSwapperT2Contai
             if (boundTo != null) {
                 ChatFormatting chatFormatting = container.getPartnerExists() == 1 ? ChatFormatting.BLUE : ChatFormatting.DARK_RED;
                 String key = container.getPartnerExists() == 1 ? "justdirethings.boundto" : "justdirethings.boundto-missing";
-                pGuiGraphics.renderTooltip(this.font, Language.getInstance().getVisualOrder(Arrays.asList(
+                pGuiGraphics.renderTooltip(this.font, Language.getInstance().getVisualOrder(List.of(
                         Component.translatable(key, Component.translatable(boundTo.dimension().location().getPath()), "[" + boundTo.pos().toShortString() + "]").withStyle(chatFormatting)
                 )), pX, pY);
             } else {
                 ChatFormatting chatFormatting = ChatFormatting.DARK_RED;
-                pGuiGraphics.renderTooltip(this.font, Language.getInstance().getVisualOrder(Arrays.asList(
+                pGuiGraphics.renderTooltip(this.font, Language.getInstance().getVisualOrder(List.of(
                         Component.translatable("justdirethings.unbound-screen").withStyle(chatFormatting)
                 )), pX, pY);
             }
@@ -97,6 +98,6 @@ public class BlockSwapperT2Screen extends BaseMachineScreen<BlockSwapperT2Contai
     @Override
     public void saveSettings() {
         super.saveSettings();
-        PacketDistributor.sendToServer(new SwapperPayload(swapBlocks, swap_entity_type));
+        Services.PLATFORM.sendToServer(new C2SSwapperPayload(swapBlocks, swap_entity_type));
     }
 }
